--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,19 @@
 {
   "dependencies": {
     "@clerk/express": "^1.7.65",
+    "@stream-io/node-sdk": "^0.7.38",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "inngest": "^3.49.3",
     "install": "^0.13.0",
     "mongoose": "^9.1.5",
-    "npm": "^11.8.0"
+    "npm": "^11.8.0",
+    "stream-chat": "^9.30.1"
   },
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "devDependencies": {
     "nodemon": "^3.1.11"
   },
