--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.59.6",
+    "@monaco-editor/react": "^4.7.0",
+    "@stream-io/video-react-sdk": "^1.31.8",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.4",
     "lucide-react": "^0.563.0",
@@ -18,6 +20,8 @@
     "react-dom": "^19.2.0",
     "react-resizable-panels": "^4.5.9",
     "react-router-dom": "^7.13.0",
+    "stream-chat": "^9.31.0",
+    "stream-chat-react": "^13.13.6",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.10"
   },
